--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf8" />
         <meta name="viewport" content="width=device-width" />
 
-        <title>Ent2ml</title>
+        <title>Playentryml</title>
 
         <link rel="icon" type="image/png" href="/f/favicon.png" />
         <link rel="stylesheet" href="/f/global.css" />
@@ -54,7 +54,7 @@
     </head>
 
     <body>
-        <img id="logo" alt="Ent2ml logo" src="/img/logo.png"/>
+        <img id="logo" alt="Playentryml logo" src="/img/logo.png"/>
     <form onsubmit="location.href = `/${document.querySelector('input[type=text]').value}`; return false">
             <input name="username" type="text" required minlength="4" maxlength="20">
             <input type="submit" value="검색">
