--- a/public/user.html
+++ b/public/user.html
@@ -4,7 +4,7 @@
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width" />
 
-    <title>Ent2ml</title>
+    <title>Playentryml</title>
 
     <link rel="icon" type="image/png" href="/f/favicon.png" />
     <link rel="stylesheet" href="/f/global.css" />
